# picopix

./: .env.sample  .gitignore  Makefile  README.md  docker-compose.cuda.yaml  docker-compose.cuda.yml  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: unit_test_rd.yml  unit_tests.yml  unit_tests_api.yml
airflow/: .env.sample  Makefile  README.md  docker-compose.yml
airflow/dags/: run_training.sh  train.py
dataset/: .gitignore  README.md  dataset_preparation.sh  prepare_dataset.py  prepare_mscoco_dataset.py
docker/: Dockerfile.api  Dockerfile.rd  Dockerfile.webapp  supervisord.conf
references/: cdc.md
src/api/: main.py  pyproject.toml  test_main.py
src/api/pixlibs/: auth.py  database.py  inference.py  models.py  oauth2.py  schemas.py  schemas_api.py  storage_boto3.py  storage_minio.py
src/api/tests/: test_main.py
src/rd/: .env.sample  README.md  inference.py  pyproject.toml  register_best_model.py  train.py  train_pix2pix.py  utils.py
src/rd/model/: colorizator.py
src/rd/scripts/: inference_autoencoder.py  inference_pix2pix.py  register_best_model.py  train_autoencoder.py  train_pix2pix.py
src/rd/tests/: test_models.py  test_utils.py
src/webapp/: app.py  navigation.py  pyproject.toml  test_app.py
src/webapp/.streamlit/: config.toml
src/webapp/pages/: page1.py  page2.py  page3.py  page4.py  page5.py
